# polaris-desk

./: .env.example  .gitignore  .gitleaks.toml  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  Makefile  README.md  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: block-env-read.sh  session-start.sh
.github/: CODEOWNERS
.github/workflows/: ci.yml  claude-output-guard.yml  sync-fork.yml
.specify/: feature.json
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
docs/: 2_需求清單_from_R7.md  4_真人操作_Auth_Firestore_checklist.md  5_引用追蹤器_GET-chunk_契約_R3.md  API_使用指南.md  G3_readiness.md  R2_首次推GitHub_checklist.md  R3_watchdog_開工指南.md  R4_ingestion_開工指南.md  R4_涵蓋率補料計畫.md  R4_資料下載清單.md  R5_eval_開工指南.md  R7_frontend_開工指南.md  R7_前端_資料表欄位表.md  R7_本次改動摘要_2026-06-19.md  design-system.md  eval_運作說明書.md  上線通知_給全員.md  上雲_Cloud_Run_runbook.md  協作開發環境_SOP_v1.md  工作紀錄_20260622.md  架構_檢索路徑與ask流程.md  測試指南_無UI.md  進度紀錄_20260621.md  開發時程_2026-06-12_W3W4_Demo衝刺.md
docs/blog/: 03_watchdog_cron_to_event.md  README.md
frontend/: .gcloudignore  Dockerfile  README.md  package-lock.json  package.json  tsconfig.tsbuildinfo
migrations/: 2026-06-12_polaris_core_initial_merge.RUNBOOK.md  2026-06-12_polaris_core_initial_merge.sql  2026-06-14_add_owner_confidential.sql  2026-06-14_add_owner_confidential_bq.sql  2026-06-17_create_chunks_0617_v1_semantic_view.sql  2026-06-17_create_company_dim.sql  2026-06-17_remove_ticker_2324.sql  2026-06-18_chunks_add_event_source_published_attrs.sql  2026-06-18_chunks_add_event_source_published_attrs_semantic.sql  2026-06-18_colpali_pages_add_event_source_published_attrs.sql  2026-06-18_create_r6_ontology.sql  2026-06-18_create_r6_semantic_layer.sql  2026-06-19_create_company_profile_financial_metrics_semantic_view.sql  2026-06-20_create_colpali_pages_semantic_view.sql
scripts/: accept_real_retriever.py  accept_watchdog.py  build_standalone_demo.py  colpali_roundtrip_check.py  gen_ontology_seeds.py  ingest_ticker.py  init_pgvector.sql  poc_financial_extract.py  reembed_pending_chunks.py  snapshot_core_to_staging.py
tests/: conftest.py  test_api.py  test_ask_retrieval_filters.py  test_auth.py  test_bq_smoke.py  test_cli.py  test_colpali_retriever.py  test_colpali_store.py  test_company_names.py  test_compression_compressors.py  test_config.py  test_config_keys.py  test_deep_research_acceptance.py  test_deep_research_agent.py  test_deep_research_react.py  test_eval_pipeline.py  test_gemini_client.py  test_ingestion_chunker.py  test_ingestion_pipeline.py  test_news_card.py  test_notification_api.py  test_notification_channels.py  test_notification_composer.py  test_notification_inbox.py  test_notification_model.py  test_notification_service.py  test_notification_subscriptions.py  test_planner_agent.py  test_prompts.py  test_rerank.py  test_retrieval_cli.py  test_retriever.py  test_retriever_wiring.py  test_retry.py  test_state.py  test_structured_store.py  test_traced_retry.py  test_user_api.py  test_user_store.py  test_vectorstore_factory.py  (+6 more)
(+271 files in other folders)
