[project]
name = "polaris-desk"
version = "0.1.0"
description = "Polaris Desk — 台股法遵與投研 Agent-Augmented Research Workflow"
requires-python = ">=3.13"   # 團隊統一用 Python 3.13 開發（見 .python-version）

dependencies = [
    # 編排
    "langgraph>=0.6",
    "langchain-core>=0.3",
    # 設定
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # LLM / 檢索
    "google-genai>=1.0",          # Gemini 新版 SDK（取代已淘汰的 google-generativeai）
    "cohere>=5.5",                 # Rerank
    "tavily-python>=0.3",          # Deep Research 網路搜尋
    "rank-bm25>=0.2",              # BM25 關鍵字檢索
    # 離線 fallback 向量庫（pgvector；預設後端為 BigQuery）
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    # 雲端向量庫（BigQuery）
    "google-cloud-bigquery>=3.25",
    # D8 prompt 壓縮量測：token 計數（離線、確定性）
    "tiktoken>=0.7",
    # W4 thin API：後端 HTTP 入口（Cloud Run + R7 Vercel 對接；純 Python、無 torch）
    "fastapi>=0.115",
    "uvicorn>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.5",
    "mypy>=1.10",
]
# D8 真實 LLMLingua backend（torch+transformers+模型權重 ~2GB）。
# 預設 / CI 不裝 → 走確定性壓縮基線；本機量 ≥50% 目標時才 `uv pip install -e '.[llmlingua]'`。
llmlingua = [
    "llmlingua>=0.2",
]
# R5 Ragas eval（judge LLM 接 Gemini）。預設 / CI 不裝 → smoke-only（token=0）；
# 跑 CP/Faithfulness/AR 時才 `uv pip install -e '.[eval]'`。
eval = [
    "ragas>=0.2",
    "datasets>=3.0",
    "langchain-google-genai>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/polaris"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
# 不收集 Google Drive / macOS 同步衝突副本（如 "test_cli 2.py"），避免重複計數
addopts = ["--ignore-glob=* [0-9].py"]
# 第三方雜訊：fastapi TestClient 對 httpx/starlette 的 deprecation（非本專案碼，輸出保持乾淨）
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient`.*",
]

[tool.ruff]
line-length = 100
target-version = "py313"
